[package]
name = "hunter"
version = "1.1.0"
authors = ["rabite0"]
edition = "2018"
description = "Fast, lag-free terminal file browser"
homepage = "https://github.com/rabite0/hunter"
repository = "https://github.com/rabite0/hunter"
readme = "README.md"
license = "WTFPL"
keywords = ["cli", "terminal", "file"]
categories = ["command-line-utilities"]

[dependencies]
termion = "1.5.1"
unicode-width = "0.1.5"
lazy_static = "0.2.11"
alphanumeric-sort = "1.0.6"
lscolors = { version = "0.5.0", features = [ "ansi_term" ]  }
tree_magic = "0.2.1"
rayon = "1.0.3"
dirs-2 = "1.1.0"
users = "0.8"
chrono = "0.4"
libc = "0.2.51"
failure = "0.1.5"
failure_derive = "0.1.1"
notify = "4.0.9"
parse-ansi = "0.1.6"
signal-notify = "0.1.3"
systemstat = "0.1.4"
osstrtools = "0.1"
pathbuftools = "0.1"


# These options increase performance and generate a smaller binary
[profile.release]
lto = true
codegen-units = 1
