cargo-features = ["default-run"]

[package]
name = "hunter"
version = "1.2.1"
authors = ["rabite0"]
edition = "2018"
description = "Fast, lag-free terminal file browser"
homepage = "https://github.com/rabite0/hunter"
repository = "https://github.com/rabite0/hunter"
readme = "README.md"
license = "WTFPL"
keywords = ["cli", "terminal", "file"]
categories = ["command-line-utilities"]
default-run = "hunter"


[dependencies]
termion = "1.5.1"
unicode-width = "0.1.5"
lazy_static = "0.2.11"
alphanumeric-sort = "1.0.6"
lscolors = { version = "0.5.0", features = [ "ansi_term" ]  }
tree_magic = "0.2.1"
rayon = "1.0.3"
dirs-2 = "1.1.0"
users = "0.8"
chrono = "0.4"
libc = "0.2.51"
failure = "0.1.5"
failure_derive = "0.1.1"
notify = "4.0.12"
parse-ansi = "0.1.6"
signal-notify = "0.1.3"
systemstat = "0.1.4"
mime_guess = "2.0.0-alpha.6"
async_value = "0.2"
osstrtools = "0.1.9"
pathbuftools = "0.1"
clap = "2.33"
mime = "0.3.13"

[features]
default = ["video"]
video = []




[workspace]
members = [".", "hunter-media"]
default-members = [".", "hunter-media"]


[patch.crates-io]
systemstat = { git = 'https://github.com/myfreeweb/systemstat', tag="v0.1.4" }

# These options increase performance and generate a smaller binary
[profile.release]
lto = true
codegen-units = 1
