[package]
name = "hunter"
version = "1.3.5"
authors = ["rabite0"]
edition = "2018"
description = "Fast, lag-free terminal file browser"
homepage = "https://github.com/rabite0/hunter"
repository = "https://github.com/rabite0/hunter"
readme = "README.md"
license = "WTFPL"
keywords = ["cli", "terminal", "file"]
categories = ["command-line-utilities"]
default-run = "hunter"


[dependencies]
termion = "1.5"
unicode-width = "0.1.5"
lazy_static = "1"
natord = "1.0.9"
lscolors = { version = "0.6.0", features = [ "ansi_term" ]  }
tree_magic_fork = "0.2.2"
rayon = "1.3"
dirs-2 = "1.1.0"
users = "0.8"
chrono = "0.4"
libc = "0.2.51"
failure = "0.1.5"
failure_derive = "0.1.1"
notify = "4.0.14"
parse-ansi = "0.1.6"
signal-notify = "0.1.3"
systemstat = "0.1.5"
mime_guess = "2.0"
async_value = "0.2.7"
osstrtools = "0.2"
pathbuftools = "0.1"
clap = "2.33"
mime = "0.3.13"
base64 = "0.10.1"
strum = "0.15"
strum_macros = "0.15"
rust-ini = "0.13"
derivative = "1.0.3"
itertools = "0.8"
nix = "0.17"
strip-ansi-escapes = "0.1"
crossbeam = "0.7"
bumpalo = { versioon = "*", features = [ "collections" ] }
splay_tree = { path = "../splay_tree" }
dmsort = "0.1.3"

image = { version = "0.21.1", optional = true }
gstreamer = { version = "0.14", optional = true }
gstreamer-app = { version = "0.14", optional = true }
gstreamer-player = { version = "0.14", optional = true }
gstreamer-video = { version = "0.14", optional = true }
gstreamer-base = { version = "0.14", optional = true }
sixel-sys = { version="0.3.1" , optional = true }

# Need extra section to avoid conflict with features
[dependencies.sixel-rs]
package = "sixel"
version = "0.3.2"
optional = true

[build-dependencies]
termion = "1.5"
rustc_version = "0.2.3"

[features]
default = ["img", "video", "sixel"]
video = ["gstreamer", "gstreamer-app", "gstreamer-player","gstreamer-video", "gstreamer-base"]
img = ["image"]
sixel = ["sixel-rs", "sixel-sys"]

[[bin]]
name = "hunter"
path = "src/main.rs"

[[bin]]
name = "hunter-media"
path = "src/hunter-media.rs"
required-features = ["img"]






# These options increase performance and generate a smaller binary
## Actually, disable lto for faster testing on dev branch
[profile.release]
debug = true
lto = false
codegen-units = 8
